--- a/html/party.html
+++ b/html/party.html
@@ -126,7 +126,7 @@
             <div>
                 <div class="sl-flex-row-center-space-between">
                     <h5>三重一大</h5>
-                    <a href="party/strong-big.html" class="button button-brown"><i class="fa fa-lg fa-plus"></i><span>新建三重一大</span></a>
+                    <a href="party/strong-big-input.html" class="button button-brown"><i class="fa fa-lg fa-plus"></i><span>新建三重一大</span></a>
                 </div>
 
                 <div class="sl-flex-row-center-flex-start document-state" >
