--- a/html/party/strong-big-common.html
+++ b/html/party/strong-big-common.html
@@ -1,10 +1,9 @@
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default "
-     id="">
-    <ul class="am-navbar-nav am-cf am-avg-sm-3">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default">
+    <ul class="am-navbar-nav am-cf">
         <li>
             <a href="strong-big-read.html" class="">
                 <i class="am-icon-eye "></i>
-                <span class="am-navbar-label ">查看三重一大</span>
+                <span class="am-navbar-label">查看三重一大</span>
             </a>
         </li>
         <li >
