--- a/html/party/activity-manager-read.html
+++ b/html/party/activity-manager-read.html
@@ -6,29 +6,9 @@
     <!--<meta name="description" content="">-->
     <!--<meta name="keywords" content="">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>审核三重一大</title>
+    <title>查看活动管理</title>
 
-    <!--&lt;!&ndash; Set render engine for 360 browser &ndash;&gt;-->
-    <!--<meta name="renderer" content="webkit">-->
 
-    <!--&lt;!&ndash; No Baidu Siteapp&ndash;&gt;-->
-    <!--<meta http-equiv="Cache-Control" content="no-siteapp"/>-->
-
-    <!--<link rel="icon" type="image/png" href="i/favicon.png">-->
-
-    <!--&lt;!&ndash; Add to homescreen for Chrome on Android &ndash;&gt;-->
-    <!--<meta name="mobile-web-app-capable" content="yes">-->
-    <!--<link rel="icon" sizes="192x192" href="i/app-icon72x72@2x.png">-->
-
-    <!--&lt;!&ndash; Add to homescreen for Safari on iOS &ndash;&gt;-->
-    <!--<meta name="apple-mobile-web-app-capable" content="yes">-->
-    <!--<meta name="apple-mobile-web-app-status-bar-style" content="black">-->
-    <!--<meta name="apple-mobile-web-app-title" content="Amaze UI"/>-->
-    <!--<link rel="apple-touch-icon-precomposed" href="i/app-icon72x72@2x.png">-->
-
-    <!--&lt;!&ndash; Tile icon for Win8 (144x144 + tile color) &ndash;&gt;-->
-    <!--<meta name="msapplication-TileImage" content="i/app-icon72x72@2x.png">-->
-    <!--<meta name="msapplication-TileColor" content="#0e90d2">-->
 
     <!-- Amaze UI CSS -->
     <!--<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">-->
@@ -59,97 +39,63 @@
 <!--<div class="top-div">-->
     <!--<div class="sl-flex-row-center-space-between sl-background-color-red top-info sl-font-color-white" >-->
         <!--<i class="am-icon-angle-left am-icon-sm" style="margin-left: 0.5rem;" onclick="topNav()"></i>-->
-        <!--&lt;!&ndash;<div class="sl-margin-left-1rem title" style="flex-grow: 2;"><span>三重一大</span></div>&ndash;&gt;-->
         <!--<div class="sl-flex-row-center-flex-end">-->
-            <!--&lt;!&ndash;<div class="sl-margin-right-1rem">发布</div>&ndash;&gt;-->
-            <!--<a href="strong-big-input.html" class="sl-margin-right-1rem sl-font-color-white"><i class="am-icon-plus"></i></a>-->
+            <!--<a href="activity-manager-input.html" class="sl-margin-right-1rem sl-font-color-white"><i class="am-icon-plus"></i></a>-->
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
 <div style="margin-top: 3rem;">
+    <!--搜索栏-->
+    <!--<div class="sl-border-bottom-1px-solid-E6E6E6 search-div" style="background-color: #E3E3E3;display:none;padding: .5rem 1rem">-->
+        <!--<div class="sl-background-color-white  sl-flex-row-center-center sl-padding-2px-10px" style="border-radius: 3rem;">-->
+            <!--<input type="text" placeholder="请输入关键字" id="search" oninput="inputVal()" style="width: 90%;">-->
+        <!--</div>-->
+    <!--</div>-->
+
+
     <div data-am-widget="tabs"
          class="am-tabs am-tabs-default"
     >
         <ul class="am-tabs-nav am-cf">
-            <li class="am-active"><a href="[data-tab-panel-0]">待审批</a></li>
-            <li class=""><a href="[data-tab-panel-1]">审核中</a></li>
+            <li class="am-active"><a href="[data-tab-panel-0]">流转中</a></li>
+            <li class=""><a href="[data-tab-panel-1]">已归档</a></li>
             <!--<li class=""><a href="[data-tab-panel-2]">更多</a></li>-->
         </ul>
         <div class="am-tabs-bd">
             <div data-tab-panel-0 class="am-tab-panel am-active">
                 <div data-am-widget="list_news" class="am-list-news am-list-news-default" >
-                    <!--&lt;!&ndash;列表标题&ndash;&gt;-->
-                    <!--<div class="am-list-news-hd am-cf">-->
-                        <!--&lt;!&ndash;带更多链接&ndash;&gt;-->
-                        <!--<a href="##" class="">-->
-                            <!--<h2>栏目标题</h2>-->
-                            <!--<span class="am-list-news-more am-fr">更多 &raquo;</span>-->
-                        <!--</a>-->
-                    <!--</div>-->
-
                     <div class="am-list-news-bd">
                         <ul class="am-list">
-
                             <li class="am-g am-list-item-dated">
                                 <a href="##" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
-
                                 <span class="am-list-date">2013-09-18</span>
-
-
                             </li>
                             <li class="am-g am-list-item-dated">
                                 <a href="##" class="am-list-item-hd ">我最喜欢的一张画</a>
-
                                 <span class="am-list-date">2013-10-14</span>
-
-
                             </li>
                             <li class="am-g am-list-item-dated">
                                 <a href="##" class="am-list-item-hd ">“你的旅行，是什么颜色？” 晒照片，换北欧梦幻极光之旅！</a>
-
                                 <span class="am-list-date">2013-11-18</span>
-
-
                             </li>
                         </ul>
                     </div>
-
                 </div>
-
             </div>
             <div data-tab-panel-1 class="am-tab-panel ">
                 <div data-am-widget="list_news" class="am-list-news am-list-news-default" >
-                    <!--列表标题-->
-                    <!--<div class="am-list-news-hd am-cf">-->
-                        <!--&lt;!&ndash;带更多链接&ndash;&gt;-->
-                        <!--<a href="###" class="">-->
-                            <!--<h2>栏目标题</h2>-->
-                            <!--<span class="am-list-news-more am-fr">更多 &raquo;</span>-->
-                        <!--</a>-->
-                    <!--</div>-->
-
                     <div class="am-list-news-bd">
                         <ul class="am-list">
-
                             <li class="am-g am-list-item-desced">
                                 <a href="http://www.douban.com/online/11614662/" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
-
-
                                 <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
-
                             </li>
                             <li class="am-g am-list-item-desced">
                                 <a href="http://www.douban.com/online/11624755/" class="am-list-item-hd ">我最喜欢的一张画</a>
-
-
                                 <div class="am-list-item-text">你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片美我最喜欢的画群296795413进群发画，少说多发图，</div>
-
                             </li>
                             <li class="am-g">
                                 <a href="http://www.douban.com/online/11645411/" class="am-list-item-hd ">“你的旅行，是什么颜色？” 晒照片，换北欧梦幻极光之旅！</a>
-
-
-
                             </li>
                         </ul>
                     </div>
@@ -166,13 +112,15 @@
 
 
 </div>
-
 <script>
+    $(document)
     //导入通用页面
     $(document).ready(function () {
         var rem = new Rem();
         rem.topNav();
-        rem.commonNav("strong-big-common.html",2);
+//        rem.contentListRead();
+        rem.bottomNav();
+//        rem.commonNav("activity-manager-common.html",0);
     });
     //从本地数据读取数据
     $(document).ready(function () {
@@ -295,8 +243,19 @@
     function topNav(){
         history.back()
     }
-</script>
+//    $('ul.am-navbar-nav li').each(function () {
+//        $(this).on('click',function () {
+//            alert($(this));
+//        })
+//    })
 
+
+</script>
+<script>
+    function getIndex(i) {
+        sessionStorage.setItem('bottomNavIndex',i);
+    }
+</script>
 </body>
 </html>
 
