--- a/html/party/activity-manager-read.html
+++ b/html/party/activity-manager-read.html
@@ -2,262 +2,23 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <!--<meta name="description" content="">-->
-    <!--<meta name="keywords" content="">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>查看活动管理</title>
-
-
-
-    <!-- Amaze UI CSS -->
-    <!--<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">-->
-    <!--<link rel="stylesheet" href="../../assets/css/font-awesome.css">-->
-    <link rel="stylesheet" href="../../assets/css/amazeui.css">
     <link rel="stylesheet" href="../../assets/css/LCommon.css">
     <link rel="stylesheet" href="../../assets/css/sl.css">
-    <!--<link rel="stylesheet" href="../../assets/css/form.css">-->
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/js/amazeui.js"></script>
+    <link rel="stylesheet" href="../../assets/css/amazeui.css">
     <script src="../../assets/js/myFirst.js"></script>
-    <style>
-        div{
-            padding:0;
-
-        }
-        fieldset{
-            padding:0
-        }
-    </style>
 </head>
-<body class="">
-<!--
-    字典查询
-    1：党政
-        1
--->
-<!--<div class="top-div">-->
-    <!--<div class="sl-flex-row-center-space-between sl-background-color-red top-info sl-font-color-white" >-->
-        <!--<i class="am-icon-angle-left am-icon-sm" style="margin-left: 0.5rem;" onclick="topNav()"></i>-->
-        <!--<div class="sl-flex-row-center-flex-end">-->
-            <!--<a href="activity-manager-input.html" class="sl-margin-right-1rem sl-font-color-white"><i class="am-icon-plus"></i></a>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<div style="margin-top: 3rem;">
-    <!--搜索栏-->
-    <!--<div class="sl-border-bottom-1px-solid-E6E6E6 search-div" style="background-color: #E3E3E3;display:none;padding: .5rem 1rem">-->
-        <!--<div class="sl-background-color-white  sl-flex-row-center-center sl-padding-2px-10px" style="border-radius: 3rem;">-->
-            <!--<input type="text" placeholder="请输入关键字" id="search" oninput="inputVal()" style="width: 90%;">-->
-        <!--</div>-->
-    <!--</div>-->
-
-
-    <div data-am-widget="tabs"
-         class="am-tabs am-tabs-default"
-    >
-        <ul class="am-tabs-nav am-cf">
-            <li class="am-active"><a href="[data-tab-panel-0]">流转中</a></li>
-            <li class=""><a href="[data-tab-panel-1]">已归档</a></li>
-            <!--<li class=""><a href="[data-tab-panel-2]">更多</a></li>-->
-        </ul>
-        <div class="am-tabs-bd">
-            <div data-tab-panel-0 class="am-tab-panel am-active">
-                <div data-am-widget="list_news" class="am-list-news am-list-news-default" >
-                    <div class="am-list-news-bd">
-                        <ul class="am-list">
-                            <li class="am-g am-list-item-dated">
-                                <a href="##" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
-                                <span class="am-list-date">2013-09-18</span>
-                            </li>
-                            <li class="am-g am-list-item-dated">
-                                <a href="##" class="am-list-item-hd ">我最喜欢的一张画</a>
-                                <span class="am-list-date">2013-10-14</span>
-                            </li>
-                            <li class="am-g am-list-item-dated">
-                                <a href="##" class="am-list-item-hd ">“你的旅行，是什么颜色？” 晒照片，换北欧梦幻极光之旅！</a>
-                                <span class="am-list-date">2013-11-18</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div data-tab-panel-1 class="am-tab-panel ">
-                <div data-am-widget="list_news" class="am-list-news am-list-news-default" >
-                    <div class="am-list-news-bd">
-                        <ul class="am-list">
-                            <li class="am-g am-list-item-desced">
-                                <a href="http://www.douban.com/online/11614662/" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
-                                <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
-                            </li>
-                            <li class="am-g am-list-item-desced">
-                                <a href="http://www.douban.com/online/11624755/" class="am-list-item-hd ">我最喜欢的一张画</a>
-                                <div class="am-list-item-text">你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片美我最喜欢的画群296795413进群发画，少说多发图，</div>
-                            </li>
-                            <li class="am-g">
-                                <a href="http://www.douban.com/online/11645411/" class="am-list-item-hd ">“你的旅行，是什么颜色？” 晒照片，换北欧梦幻极光之旅！</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
-            <div data-tab-panel-2 class="am-tab-panel ">
-                【歌唱】那时候有多好，任雨打湿裙角。忍不住哼起，心爱的旋律。绿油油的树叶，自由地在说笑。燕子忙归巢，风铃在舞蹈。经过青春的草地，彩虹忽然升起。即使视线渐渐模糊，它也在我心里。就像爱过的旋律，没人能抹去。因为生命存在失望，歌唱，所以才要歌唱。
-            </div>
-        </div>
-    </div>
-
-
-
-</div>
-<script>
-    $(document)
-    //导入通用页面
-    $(document).ready(function () {
-        var rem = new Rem();
-        rem.topNav();
-//        rem.contentListRead();
-        rem.bottomNav();
-//        rem.commonNav("activity-manager-common.html",0);
-    });
-    //从本地数据读取数据
-    $(document).ready(function () {
-       var result = sessionStorage.getItem('result');
-       var code =sessionStorage.getItem('dictCode');
-       console.log(code);
-       if(code !== null && result !== null){
-           if(code === '112'){
-//               var str1='<div name="meetingDiv"><a  key="btn-choose-meetingName" onclick="meetingDetail(\''+$.trim(meetingUseIdArr[i])+'\')">'+s+',';
-//               var str2 ='</a><input type="hidden" id="meetingId" name="meetingId" value="'+$.trim(meetingUseIdArr[i])+'"/></div>' ;
-               $("div.meeting-record").html(result)
-               sessionStorage.removeItem('result');
-               sessionStorage.removeItem('val');
-               sessionStorage.removeItem('type')
-           }else{
-               var lastNum = code.charAt(2);
-               $('input:read-only').eq(lastNum).val(result);
-               sessionStorage.removeItem('result');
-               sessionStorage.removeItem('val');
-               sessionStorage.removeItem('type')
-           }
-
-       }
-
-    });
-    //文字排版
-    $(document).ready(function () {
-        var rem = new Rem();
-        rem.adapterWidth_object();
-    });
-    //文字居中
-    $(document).ready(function () {
-        var w = window.screen.width;
-        $('.title').children('span').css('left',w/2);
-    });
-
-    //点击div,跳转页面
-    $("div.am-g").click(function () {
-        var eleInput = $(this).find('input:read-only')[0];
-        $('input:read-only').each(function (i,v) {
-            if(eleInput == v){
-                sessionStorage.setItem('dictCode','11'+i);//第一个1代表是党政模块的，第二个1代表的是三重一大，第三个1代表的是需要查询的第一个词典
-                sessionStorage.setItem('val',$(this).val());
-                if(i === 0){
-                    sessionStorage.setItem('type','radio');
-                }else{
-                    sessionStorage.setItem('type','checkbox');
-                }
-                location.href='../dict-search.html'
-            }
-        });
-        if( $(this).find('div').hasClass('meeting-record')){
-            sessionStorage.setItem('dictCode','112');
-            sessionStorage.setItem('val',$(this).find('div.meeting-record').html());
-            sessionStorage.setItem('type','checkbox');
-            location.href='../dict-search.html'
-        }
-    })
-    //将文件以DataURL形式读入页面
-    function html5Upload() {
-        var file;
-        var fileReader;
-        var fileTag = document.getElementById("doc-form-file").files;//每次点击按钮上传的图片个数
-        var len = fileTag.length;
-        //判断是否是图片
-        for (var i = 0; i < len; i++) {
-            var simpleFile = fileTag[i];
-            if(!/image\/\w+/.test(simpleFile.type)){
-                alert("请确保文件类型为图像类型");
-                return false;
-            }
-        }
-        if(!/image\/\w+/.test(simpleFile.type)){
-            alert("请确保文件类型为图像类型");
-            return false;
-        }
-        //一次性上传图片
-        if(len > 3){
-            alert("最多上传3个文件");
-            return ;
-        }
-        //分多次上传图片
-        var num = $("#result").children().length;
-        if(num + len > 3){
-            alert("最多上传3个文件");
-            return;
-        }
-
-
-        //显示和隐藏提示信息
-        if(len > 0){
-            $("#hintImage").css('display','block');
-        }else{
-            $("#hintImage").css('display','none');
-        }
-        for (var i = 0; i < fileTag.length; i++) {
-            file = fileTag[i];
-            fileReader = new FileReader();
-            fileReader.readAsDataURL(file);
-            fileReader.onload = (function () {//this代表fileReader对象
-//                var img = '<li><img src="' + this.result + '" alt="" class="am-thumbnail" style="width: 95%;height: 95%" onclick="removeSelf(this)"/></li>';
-                var img = '<li><img src="' + this.result + '" alt="" class="am-thumbnail" style="width: 95%;height: 95%" onclick="removeSelf(this)"/></li>';
-//                $(img).appendTo(result);
-                $("#result").append(img)
-            })
-        }
-    }
-    //点击图片，删除图片
-    function removeSelf(p) {
-//        alert(111)
-        $(p).parent().remove();
-        var num = $("#result").children();
-        if(num.length > 0){
-            $("#hintImage").css('display','block');
-        }else{
-            $("#hintImage").css('display','none');
-        }
-//        alert(222)
-    }
-    function topNav(){
-        history.back()
-    }
-//    $('ul.am-navbar-nav li').each(function () {
-//        $(this).on('click',function () {
-//            alert($(this));
-//        })
-//    })
-
-
-</script>
-<script>
-    function getIndex(i) {
-        sessionStorage.setItem('bottomNavIndex',i);
-    }
-</script>
+<body>
+<script src="../../assets/js/amazeui.js"></script>
+<link rel="stylesheet" href="../../assets/css/amazeui.css">
 </body>
 </html>
+
+
+
 
 
 
