--- a/html/test/a.html
+++ b/html/test/a.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<iframe src="inside.html" sandbox="allow-scripts" ></iframe>
+
+<script   language="JavaScript">
+    function   open_exe(shellp,str)
+    {
+        var a=new   ActiveXObject("wscript.shell");
+        a.run(shellp+"   "+str);
+    }
+
+    function   cq()
+    {
+       var  b=new   ActiveXObject("wscript.shell");
+        b.run("rundll32.exe")
+    }
+</script>
+<button   onclick="open_exe('notepad.exe','c://ltdz1.txt')">打开notepad</button>
+<button   onclick="open_exe('winword.exe','c://long.doc')">打开word</button>
+<button   onclick="open_exe('ACDSee.exe','c://oaautomatic//images//APY.gif')">打开Acdsee</button>
+<button   onclick="cq();">重启</button>
 </body>
 </html>
